--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/hivemind_logo_nobg.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HiveMind Nexus</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="ca">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/hivemind_logo_nobg.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="HiveMind Nexus és una plataforma per connectar i gestionar ments en xarxa, optimitzant el treball col·laboratiu mitjançant la intel·ligència artificial." />
+  <title>HiveMind Nexus</title>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
