--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ca">
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <link rel="icon" type="image/svg+xml" href="/hivemind_logo_nobg.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="HiveMind Nexus és una plataforma per connectar i gestionar ments en xarxa, optimitzant el treball col·laboratiu mitjançant la intel·ligència artificial." />
